# fdt_client

./: .gitignore  pyproject.toml
interfaces/: fdt_client.py  fdt_server.py  vis.py
scripts/: base.py
src/fdt_client/: __init__.py  client.py  fdt_server.py  main.py  rgbd_cam.py  vis.py
