[project]
name = "fdt-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "loguru>=0.7.3",
    "looptick>=0.1.4",
    "pyorbbecsdk",
    "pyzmq>=27.1.0",
    "rich>=14.2.0",
]

[tool.uv.sources]
pyorbbecsdk = { path = "lib/pyorbbecsdk-1.3.4-cp310-cp310-linux_x86_64.whl" }

[build-system]   
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
